# easy-fine-tuner

./: LICENSE  MANIFEST.in  PYPI_PUBLISHING.md  README.md  pyproject.toml  requirements.txt  setup.py
Notebooks/: Qwen3-1.7b.ipynb
easyfinetuner/: __init__.py  config.py  data_processor.py  evaluator.py  exporter.py  finetuner.py  utils.py
easyfinetuner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
easyfinetuner/templates/: __init__.py  alpaca.py  chatml.py
examples/: 01_basic_finetuning.py  02_advanced_finetuning.py  03_chatbot_training.py
parameters/: README.md  README.txt
